fix[p2]:listing image ratio on small screens

--- a/04b.project 2/commerce/auctions/static/auctions/styles.css
+++ b/04b.project 2/commerce/auctions/static/auctions/styles.css
@@ -13,6 +13,8 @@ body {
     object-fit: cover;
 }
 
+.listing_img {object-fit: cover;}
+
 .small_form > *{
     margin-bottom:0.5vh
 }
